Changed some CSS elements and added some JS
I changed some parts of CSS like the background and the #separator.

I added some JS and this part of JS will verify if the input was submit by enter or the plus button.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="list">
       <div id="title">
         <input id="titleInput" type="text" placeholder="My List" />
-        <i class="bx bx-edit"></i>
+        <i class="bx bx-edit bx-sm"></i>
       </div>
 
       <div id="separator"></div>
@@ -35,8 +35,10 @@
 
       <div id="addItem">
         <input id="itemInput" type="text" />
-        <i class="bx bx-plus"></i>
+        <i class="bx bx-plus bx-sm"></i>
       </div>
     </div>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
